# Neis-Security-System

./: .gitignore  README.md  WARP.md  pyproject.toml  requirements.txt
configs/: example.env  whitelist.json
data/: gatewatch.db
scripts/: run.ps1
src/gatewatch/: camera.py  detect.py  main.py  notify.py  ocr.py  pipeline.py  storage.py
src/gatewatch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_imports.py  test_storage.py
